k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stans
  labels:
    app.kubernetes.io/name: stans
